fixed spacings on top of and below buttoms

--- a/public/styles.css
+++ b/public/styles.css
@@ -366,6 +366,8 @@ p {
   font-weight: 700;
   font-size: calc(60% + 1.25vw);
   padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
   cursor: pointer;
 }
 
